kubernetes/ingress/grafana.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
  name: grafana-ingress
spec:
  rules:
    - host: localmovies-grafana.hopto.org
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
    - host: nathanrahm-grafana.ddns.net
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - localmovies-grafana.hopto.org
        - nathanrahm-grafana.ddns.net
      secretName: grafana
