kubernetes/ingress/jenkins.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: jenkins-ingress
spec:
  rules:
    - host: nathanrahm-jenkins.ddns.net
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - nathanrahm-jenkins.ddns.net
      secretName: jenkins
