kubernetes/ingress/localmovies.yml
# Using this together with nginx-ingress installed as described here - https://kubernetes.github.io/ingress-nginx/deploy/#generic-deployment

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: localmovies-ingress
  annotations:
      kubernetes.io/tls-acme: 'true'
      ingress.kubernetes.io/ssl-redirect: "true"
      certmanager.k8s.io/issuer: letsencrypt-prod
      kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localmovies.hopto.org
    http:
      paths:
       - path: /
         backend:
          serviceName: localmovie-web
          servicePort: 8080
       - path: /auth/realms/LocalMovies
         backend:
           serviceName: keycloak
           servicePort: 8080
       - path: /auth/resources
         backend:
           serviceName: keycloak
           servicePort: 8080
  tls:
  - hosts:
    - "localmovies.hopto.org"
    secretName: localmovies-tls
